--- a/frontend/therapist.html
+++ b/frontend/therapist.html
@@ -2,45 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Therapist Dashboard – TheraPrompt</title>
   <script src="/static/therapist.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans p-6">
-  <div class="max-w-4xl mx-auto">
-    <h1 class="text-2xl font-bold mb-4">🧑‍⚕️ Therapist Dashboard</h1>
+<body class="bg-pink-50 text-gray-800 font-sans p-6">
 
-    <div class="mb-6">
-      <label for="clientSelect" class="block mb-2 font-semibold">Select a client:</label>
-      <select id="clientSelect" class="w-full p-2 border rounded bg-white text-gray-800"></select>
-    </div>
+  <!-- 🔐 Therapist Login -->
+  <div id="loginBox" class="max-w-md mx-auto bg-white p-6 rounded shadow">
+    <h1 class="text-2xl font-bold mb-4 text-center">🔐 Therapist Login</h1>
+    <label class="block mb-2 font-semibold">Secret Password:</label>
+    <input id="therapistPassword" type="password" class="w-full p-2 border rounded mb-4" placeholder="Enter access password" />
+    <button id="loginBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded w-full">
+      Login
+    </button>
+    <p id="loginError" class="text-red-600 mt-3 hidden text-sm text-center">Incorrect password. Try again.</p>
+  </div>
 
-    <div class="flex gap-4 my-4">
-      <input id="emotionFilter" class="border p-2 rounded w-1/3" placeholder="Filter by emotion" />
-      <input id="topicFilter" class="border p-2 rounded w-1/3" placeholder="Filter by topic" />
-      <button id="clearFilters" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">Clear</button>
-    </div>
-    
-    <div id="journalBox" class="hidden">
-      <h2 class="text-xl font-semibold mb-2">📄 Client Journal History</h2>
-      <table class="w-full text-sm border-collapse border border-gray-300">
-        <thead class="bg-gray-100">
-          <tr>
-            <th class="border px-2 py-1">Date</th>
-            <th class="border px-2 py-1">Emotions</th>
-            <th class="border px-2 py-1">Topics</th>
-            <th class="border px-2 py-1">Summary</th>
-          </tr>
-        </thead>
-        <tbody id="journalTable" class="bg-white"></tbody>
-      </table>
+  <!-- 📊 Dashboard -->
+  <div id="dashboardBox" class="hidden max-w-6xl mx-auto mt-6 space-y-6">
+
+    <h1 class="text-3xl font-semibold text-center text-indigo-800 mb-4">🧑‍⚕️ Therapist Dashboard</h1>
+
+    <!-- 👥 Select Client -->
+    <div class="bg-white p-4 rounded shadow">
+      <label for="clientSelect" class="block mb-2 font-semibold">Select a Client:</label>
+      <select id="clientSelect" class="w-full p-2 border rounded bg-white">
+        <option value="">-- Choose Client --</option>
+      </select>
     </div>
 
-    <div id="statsBox" class="mt-6 hidden">
-      <h2 class="text-xl font-semibold mb-2">📊 Client Summary Stats</h2>
-      <pre id="statsData" class="bg-gray-100 p-4 rounded text-sm overflow-x-auto">Loading...</pre>
+    <!-- 🗂️ Tabs -->
+    <div id="tabs" class="hidden flex mt-4 border-b border-gray-300">
+      <button id="tabJournal" class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">📄 Journal</button>
+      <button id="tabStats" class="ml-4 px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">📊 Stats</button>
     </div>
+
+    <!-- 📄 Journal Table -->
+    <div id="journalBox" class="hidden bg-white p-4 rounded shadow">
+      <h2 class="text-lg font-semibold mb-3">📔 Journal History</h2>
+      <div class="overflow-x-auto">
+        <table class="w-full text-sm border border-gray-200 rounded">
+          <thead class="bg-gray-100">
+            <tr>
+              <th class="border px-2 py-1">Date</th>
+              <th class="border px-2 py-1">Emotions</th>
+              <th class="border px-2 py-1">Topics</th>
+              <th class="border px-2 py-1">Summary</th>
+              <th class="border px-2 py-1">Cognitive Patterns</th>
+              <th class="border px-2 py-1">Suggested Questions</th>
+              <th class="border px-2 py-1">AI Tip</th>
+              <th class="border px-2 py-1">Your Feedback</th>
+            </tr>
+          </thead>
+          <tbody id="journalTable" class="bg-white"></tbody>
+        </table>
+      </div>
+    </div>
+
+    <!-- 📊 Stats -->
+    <div id="statsBox" class="hidden bg-white p-4 rounded shadow">
+      <h2 class="text-lg font-semibold mb-2">📈 AI Summary Stats</h2>
+      <div id="statsData" class="text-sm space-y-1 text-gray-700"></div>
+    </div>
+
   </div>
 </body>
 </html>
