--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
   <div class="max-w-4xl mx-auto bg-white p-6 rounded-2xl shadow-xl space-y-5">
 
     <!-- 🟣 Header -->
-    <h1 class="text-3xl font-bold text-purple-700">TheraPrompt Journal</h1>
+    <h1 class="text-3xl font-bold text-purple-700">TheraPrompt</h1>
 
     <!-- 🧑 User ID -->
     <div>
