--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,10 +12,10 @@
   <script src="/static/script.js" defer></script>
 </head>
 <body class="bg-gradient-to-br from-pink-100 via-purple-100 to-sky-100 min-h-screen text-gray-800 font-sans p-6">
-  <div class="max-w-4xl mx-auto bg-white p-6 rounded-2xl shadow-xl space-y-5">
+  <div class="max-w-2xl mx-auto bg-white p-6 rounded-2xl shadow-xl space-y-5">
 
     <!-- 🟣 Header -->
-    <h1 class="text-3xl font-bold text-purple-700">TheraPrompt</h1>
+    <h1 class="text-3xl font-bold text-purple-700">🌿 TheraPrompt Journal</h1>
 
     <!-- 🧑 User ID -->
     <div>
@@ -68,14 +68,17 @@
             <th class="border px-3 py-2">Emotions</th>
             <th class="border px-3 py-2">Topics</th>
             <th class="border px-3 py-2">Summary</th>
-            <th class="border px-3 py-2">Feedback</th>
           </tr>
         </thead>
         <tbody id="historyTable" class="bg-white text-gray-700"></tbody>
       </table>
     </div>
 
-    
+    <!-- 🔍 Raw Insights (for debugging or detail view) -->
+    <div id="insights" class="hidden mt-6">
+      <h2 class="text-xl font-semibold text-purple-800 mb-2">🧠 AI Insights</h2>
+      <pre id="resultBox" class="bg-gray-100 p-3 rounded-lg text-sm overflow-auto text-gray-800"></pre>
+    </div>
 
   </div>
 </body>
