--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,7 @@
             <th class="border px-3 py-2">Emotions</th>
             <th class="border px-3 py-2">Topics</th>
             <th class="border px-3 py-2">Summary</th>
+            <th class="border px-3 py-2">Feedback</th>
           </tr>
         </thead>
         <tbody id="historyTable" class="bg-white text-gray-700"></tbody>
