--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
       📚 View Journal History
     </button>
 
-    <!-- 📖 History Section -->
+    <!--  History Section -->
     <div id="historyBox" class="hidden mt-4">
       <h2 class="text-xl font-semibold text-purple-800 mb-2">🗃️ Past Entries</h2>
       <table class="w-full text-sm border-collapse border border-gray-300 rounded overflow-hidden">
