Project renamed to B.T.S

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TheraPrompt – Journal</title>
+  <title>Between.The.Sessions – Journal</title>
 
   <!-- ✅ Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
   <div class="max-w-4xl mx-auto bg-white p-6 rounded-2xl shadow-xl space-y-5">
 
     <!-- 🟣 Header -->
-    <h1 class="text-3xl font-bold text-purple-700">TheraPrompt Journal</h1>
+    <h1 class="text-3xl font-bold text-purple-700">Between.The.Sessions</h1>
 
     <!-- 🧑 User ID -->
     <div>
@@ -31,10 +31,10 @@
 
     <!-- 🎤 Voice Transcription -->
     <div>
-      <p class="font-medium text-gray-700 mb-1">🎤 Voice Transcription:</p>
+      <p class="font-medium text-gray-700 mb-1">Voice Transcription:</p>
       <div class="space-x-2 mb-2">
-        <button id="startMic" class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600">🎙️ Start Voice</button>
-        <button id="confirmVoice" class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">✅ Use Transcript</button>
+        <button id="startMic" class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600"> Start Voice</button>
+        <button id="confirmVoice" class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600"> Use Transcript</button>
       </div>
       <p id="voicePreview" class="w-full h-24 overflow-y-auto p-2 bg-gray-100 border rounded-lg text-sm whitespace-pre-line text-gray-700">Transcript will appear here...</p>
     </div>
@@ -47,7 +47,7 @@
 
     <!-- ✅ Submit Button -->
     <button id="submitBtn" class="w-full mt-3 bg-pink-500 text-white px-4 py-2 rounded-lg hover:bg-pink-600 transition">
-      ✍️ Submit Entry
+       Submit Entry
     </button>
 
     <!-- 💡 AI-Generated Tip -->
@@ -55,12 +55,12 @@
 
     <!-- 📚 History Button -->
     <button id="historyBtn" class="w-full mt-4 bg-gray-700 text-white px-4 py-2 rounded-lg hover:bg-gray-800 transition">
-      📚 View Journal History
+       View Journal History
     </button>
 
     <!--  History Section -->
     <div id="historyBox" class="hidden mt-4">
-      <h2 class="text-xl font-semibold text-purple-800 mb-2">🗃️ Past Entries</h2>
+      <h2 class="text-xl font-semibold text-purple-800 mb-2"> Past Entries</h2>
       <table class="w-full text-sm border-collapse border border-gray-300 rounded overflow-hidden">
         <thead class="bg-purple-50 text-purple-800">
           <tr>
