--- a/frontend/therapist.html
+++ b/frontend/therapist.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Therapist Dashboard – TheraPrompt</title>
+  <title>Therapist Dashboard – Between.The.Sessions</title>
   <script src="/static/therapist.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -11,7 +11,7 @@
 
   <!-- 🔐 Therapist Login -->
   <div id="loginBox" class="max-w-md mx-auto bg-white p-6 rounded shadow">
-    <h1 class="text-2xl font-bold mb-4 text-center">🔐 Therapist Login</h1>
+    <h1 class="text-2xl font-bold mb-4 text-center"> Therapist Login</h1>
     <label class="block mb-2 font-semibold">Secret Password:</label>
     <input id="therapistPassword" type="password" class="w-full p-2 border rounded mb-4" placeholder="Enter access password" />
     <button id="loginBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded w-full">
@@ -23,7 +23,7 @@
   <!-- 📊 Dashboard -->
   <div id="dashboardBox" class="hidden max-w-6xl mx-auto mt-6 space-y-6">
 
-    <h1 class="text-3xl font-semibold text-center text-indigo-800 mb-4">🧑‍⚕️ Therapist Dashboard</h1>
+    <h1 class="text-3xl font-semibold text-center text-indigo-800 mb-4">Therapist Dashboard</h1>
 
     <!-- 👥 Select Client -->
     <div class="bg-white p-4 rounded shadow">
@@ -35,13 +35,13 @@
 
     <!-- 🗂️ Tabs -->
     <div id="tabs" class="hidden flex mt-4 border-b border-gray-300">
-      <button id="tabJournal" class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">📄 Journal</button>
-      <button id="tabStats" class="ml-4 px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">📊 Stats</button>
+      <button id="tabJournal" class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">Journal</button>
+      <button id="tabStats" class="ml-4 px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600"> Stats</button>
     </div>
 
     <!-- 📄 Journal Table -->
     <div id="journalBox" class="hidden bg-white p-4 rounded shadow">
-      <h2 class="text-lg font-semibold mb-3">📔 Journal History</h2>
+      <h2 class="text-lg font-semibold mb-3"> Journal History</h2>
       <div class="overflow-x-auto">
         <table class="w-full text-sm border border-gray-200 rounded">
           <thead class="bg-gray-100">
