therapist dashboard error fixed

--- a/frontend/therapist.html
+++ b/frontend/therapist.html
@@ -61,7 +61,13 @@
       </div>
     </div>
 
-    
+    <!-- 📊 Stats Section -->
+    <div id="statsBox" class="hidden bg-white p-4 rounded shadow">
+      <h2 class="text-lg font-semibold mb-3">Client Statistics</h2>
+      <div id="statsData" class="space-y-2 text-sm">
+        <!-- Stats will be loaded here -->
+      </div>
+    </div>
 
   </div>
 </body>
