--- a/frontend/therapist.html
+++ b/frontend/therapist.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-pink-50 text-gray-800 font-sans p-6">
 
-  <!-- 🔐 Therapist Login -->
+  <!-- Therapist Login -->
   <div id="loginBox" class="max-w-md mx-auto bg-white p-6 rounded shadow">
     <h1 class="text-2xl font-bold mb-4 text-center"> Therapist Login</h1>
     <label class="block mb-2 font-semibold">Secret Password:</label>
@@ -20,12 +20,12 @@
     <p id="loginError" class="text-red-600 mt-3 hidden text-sm text-center">Incorrect password. Try again.</p>
   </div>
 
-  <!-- 📊 Dashboard -->
+  <!--  Dashboard -->
   <div id="dashboardBox" class="hidden max-w-6xl mx-auto mt-6 space-y-6">
 
     <h1 class="text-3xl font-semibold text-center text-indigo-800 mb-4">Therapist Dashboard</h1>
 
-    <!-- 👥 Select Client -->
+    <!--  Select Client -->
     <div class="bg-white p-4 rounded shadow">
       <label for="clientSelect" class="block mb-2 font-semibold">Select a Client:</label>
       <select id="clientSelect" class="w-full p-2 border rounded bg-white">
@@ -33,13 +33,13 @@
       </select>
     </div>
 
-    <!-- 🗂️ Tabs -->
+    <!--  Tabs -->
     <div id="tabs" class="hidden flex mt-4 border-b border-gray-300">
       <button id="tabJournal" class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">Journal</button>
       <button id="tabStats" class="ml-4 px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600"> Stats</button>
     </div>
 
-    <!-- 📄 Journal Table -->
+    <!--  Journal Table -->
     <div id="journalBox" class="hidden bg-white p-4 rounded shadow">
       <h2 class="text-lg font-semibold mb-3"> Journal History</h2>
       <div class="overflow-x-auto">
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <!-- 📊 Stats Section -->
+    <!--  Stats Section -->
     <div id="statsBox" class="hidden bg-white p-4 rounded shadow">
       <h2 class="text-lg font-semibold mb-3">Client Statistics</h2>
       <div id="statsData" class="space-y-2 text-sm">
