--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   
   <!--  Main Script -->
-  <script src="/static/script.js" defer></script>
+  <script src="/static/js/main.js" defer></script>
+  <link rel="stylesheet" href="/static/css/style.css" />
+
+
 </head>
 <body class="bg-gradient-to-br from-pink-100 via-purple-100 to-sky-100 min-h-screen text-gray-800 font-sans p-6">
   <div class="max-w-4xl mx-auto bg-white p-6 rounded-2xl shadow-xl space-y-5">
