--- a/frontend/therapist.html
+++ b/frontend/therapist.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Therapist Dashboard – Between.The.Sessions</title>
-  <script src="/static/therapist.js" defer></script>
+  <script src="/static/js/therapist.js" defer></script>
+  <link rel="stylesheet" href="/static/css/style.css" />
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-pink-50 text-gray-800 font-sans p-6">
