--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   
   <!--  Main Script -->
-  <script src="/static/js/main.js" defer></script>
+  <script src="/static/js/script.js" defer></script>
   <link rel="stylesheet" href="/static/css/style.css" />
 
 
