--- a/frontend/therapist.html
+++ b/frontend/therapist.html
@@ -2,51 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Therapist Dashboard – Between.The.Sessions</title>
-  <script src="/static/js/therapist.js" defer></script>
-  <link rel="stylesheet" href="/static/css/style.css" />
 
+  <!-- Tailwind & Styles -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/static/css/style.css" />
+  <script src="/static/js/therapist.js" defer></script>
 </head>
-<body class="bg-pink-50 text-gray-800 font-sans p-6">
 
-  <!-- Therapist Login -->
-  <div id="loginBox" class="max-w-md mx-auto bg-white p-6 rounded shadow">
-    <h1 class="text-2xl font-bold mb-4 text-center"> Therapist Login</h1>
-    <label class="block mb-2 font-semibold">Secret Password:</label>
-    <input id="therapistPassword" type="password" class="w-full p-2 border rounded mb-4" placeholder="Enter access password" />
-    <button id="loginBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded w-full">
-      Login
+<body class="bg-gradient-to-br from-pink-100 via-indigo-50 to-sky-100 text-gray-800 font-sans antialiased p-4 sm:p-6">
+
+  <!-- 🔐 Therapist Login -->
+  <div id="loginBox" class="max-w-md mx-auto bg-white/90 backdrop-blur rounded-2xl shadow-xl p-6 sm:p-8 space-y-4">
+    <h1 class="text-2xl sm:text-3xl font-bold text-center text-purple-700">Therapist Login</h1>
+    <label for="therapistPassword" class="block text-sm font-semibold text-gray-700">Secret Password:</label>
+    <input id="therapistPassword" type="password" class="w-full mt-1 p-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-300" placeholder="Enter access password" />
+    <button id="loginBtn" class="w-full bg-blue-600 text-white py-2 rounded-lg font-medium hover:bg-blue-700 transition">
+      🔓 Login
     </button>
-    <p id="loginError" class="text-red-600 mt-3 hidden text-sm text-center">Incorrect password. Try again.</p>
+    <p id="loginError" class="text-red-600 hidden text-sm text-center">Incorrect password. Try again.</p>
   </div>
 
-  <!--  Dashboard -->
-  <div id="dashboardBox" class="hidden max-w-6xl mx-auto mt-6 space-y-6">
+  <!-- 📊 Dashboard -->
+  <div id="dashboardBox" class="hidden max-w-6xl mx-auto mt-8 space-y-6">
 
-    <h1 class="text-3xl font-semibold text-center text-indigo-800 mb-4">Therapist Dashboard</h1>
+    <!-- 🧠 Header -->
+    <h1 class="text-3xl font-bold text-center text-indigo-800">Therapist Dashboard</h1>
 
-    <!--  Select Client -->
-    <div class="bg-white p-4 rounded shadow">
-      <label for="clientSelect" class="block mb-2 font-semibold">Select a Client:</label>
-      <select id="clientSelect" class="w-full p-2 border rounded bg-white">
+    <!-- 👤 Select Client -->
+    <div class="bg-white/90 backdrop-blur rounded-xl shadow p-4 sm:p-6">
+      <label for="clientSelect" class="block font-semibold text-gray-700 mb-2">Select a Client:</label>
+      <select id="clientSelect" class="w-full p-2 rounded-lg border border-gray-300 bg-white focus:ring-2 focus:ring-purple-300">
         <option value="">-- Choose Client --</option>
       </select>
     </div>
 
-    <!--  Tabs -->
-    <div id="tabs" class="hidden flex mt-4 border-b border-gray-300">
-      <button id="tabJournal" class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">Journal</button>
-      <button id="tabStats" class="ml-4 px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600"> Stats</button>
+    <!-- 🧭 Tabs -->
+    <div id="tabs" class="hidden flex flex-wrap gap-2 sm:gap-4 mt-4 border-b border-gray-300 pb-1">
+      <button id="tabJournal" class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">📘 Journal</button>
+      <button id="tabStats" class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600">📈 Stats</button>
     </div>
 
-    <!--  Journal Table -->
-    <div id="journalBox" class="hidden bg-white p-4 rounded shadow">
-      <h2 class="text-lg font-semibold mb-3"> Journal History</h2>
+    <!-- 📘 Journal Table -->
+    <div id="journalBox" class="hidden bg-white/90 backdrop-blur p-4 sm:p-6 rounded-xl shadow">
+      <h2 class="text-lg font-semibold text-purple-700 mb-3">Journal History</h2>
       <div class="overflow-x-auto">
-        <table class="w-full text-sm border border-gray-200 rounded">
-          <thead class="bg-gray-100">
+        <table class="min-w-[800px] w-full text-sm border border-gray-200 rounded-xl overflow-hidden">
+          <thead class="bg-purple-50 text-purple-900">
             <tr>
               <th class="border px-2 py-1">Date</th>
               <th class="border px-2 py-1">Emotions</th>
@@ -58,16 +61,16 @@
               <th class="border px-2 py-1">Your Feedback</th>
             </tr>
           </thead>
-          <tbody id="journalTable" class="bg-white"></tbody>
+          <tbody id="journalTable" class="bg-white divide-y divide-gray-200 text-gray-700"></tbody>
         </table>
       </div>
     </div>
 
-    <!--  Stats Section -->
-    <div id="statsBox" class="hidden bg-white p-4 rounded shadow">
-      <h2 class="text-lg font-semibold mb-3">Client Statistics</h2>
-      <div id="statsData" class="space-y-2 text-sm">
-        <!-- Stats will be loaded here -->
+    <!-- 📈 Stats -->
+    <div id="statsBox" class="hidden bg-white/90 backdrop-blur p-4 sm:p-6 rounded-xl shadow">
+      <h2 class="text-lg font-semibold text-purple-700 mb-3">Client Statistics</h2>
+      <div id="statsData" class="space-y-2 text-sm text-gray-800">
+        <!-- Dynamic stats -->
       </div>
     </div>
 
